--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@ngrx/store": "^19.2.1",
     "ag-grid-angular": "^34.0.0",
     "bootstrap": "^5.3.7",
+    "echarts": "^5.6.0",
+    "ngx-echarts": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
